# gitcrawlertest

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  github_crawler.py  gitrequests.py  headers.py  proxies.py
tests/: test_proxies.py  test_requests.py  test_utils.py
utils/: __init__.py  decorators.py
