[tool.poetry]
name = "gitcrawlertest"
version = "0.1.0"
description = "This script implements a GitHub search crawler that returns all links from search results. The script supports proxy and authentication."
authors = ["Your Name <you@example.com>"]
license = "Alex"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
